# tiger

./: .gitignore  .ocamlformat  README.md  dune-project  tiger.opam
test/: canon.ml  canon2.ml  codegen.ml  dune  fgraph.ml  igraph.ml  log  parse.ml  regalloc.ml  semant.ml  test.ml
test/canon/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  test26.txt  test27.txt  test28.txt  test29.txt  test3.txt  test30.txt  test31.txt  test32.txt  test33.txt  test34.txt  test35.txt  test36.txt  test37.txt  test38.txt  test39.txt  test4.txt  test40.txt  test41.txt  test42.txt  test43.txt  test44.txt  test45.txt  (+9 more)
test/codegen/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  test26.txt  test27.txt  test28.txt  test29.txt  test3.txt  test30.txt  test31.txt  test32.txt  test33.txt  test34.txt  test35.txt  test36.txt  test37.txt  test38.txt  test39.txt  test4.txt  test40.txt  test41.txt  test42.txt  test43.txt  test44.txt  test45.txt  (+9 more)
test/fgraph/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  test26.txt  test27.txt  test28.txt  test29.txt  test3.txt  test30.txt  test31.txt  test32.txt  (+23 more)
(+189 files in other folders)
