(executable
 (public_name parse)
 (modules parse)
 (libraries tiger))

(executable
 (public_name semant)
 (modules semant)
 (libraries tiger))

(executable
 (public_name canon)
 (modules canon)
 (libraries tiger))

(executable
 (public_name codegen)
 (modules codegen)
 (libraries tiger))

(executable
 (public_name fgraph)
 (modules fgraph)
 (libraries tiger))

(executable
 (public_name igraph)
 (modules igraph)
 (libraries tiger))

(executable
 (public_name regalloc)
 (modules regalloc)
 (libraries tiger))
